# time-logger

./: .gitignore  .pre-commit-config.yaml  Makefile  pyproject.toml  readme.md  requirements-dev.txt  run_examples.py  run_tests.py
.github/workflows/: codeql-analysis.yaml  publish_package.yaml  publish_package_test.yaml  pytest.yaml
src/time_logger/: __init__.py
tests/: test_general.py  test_profiler.py  test_profiling.py  test_profiling_decorator.py  test_profiling_functional.py  test_profiling_integration.py  tests_profiling.py
time-logger/: profiling.py  test.py
time_logger/: profiling.py
