# https://setuptools.pypa.io/en/latest/build_meta.html

[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tools.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]


[project]
name = "pytime-logger"
version = "0.0.3"
authors = [
  { name="Amir Pourmand", email="pourmand1376@gmail.com" },
]
description = "This project provides a simple way to profile the execution time of your Python functions."

readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.0"

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    
]

[project.urls]
"Homepage" = "https://github.com/pourmand1376/time-logger/"
"Bug Tracker" = "https://github.com/pourmand1376/time-logger/issues"

# Black formatting
[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
      .eggs         # exclude a few common directories in the
    | .git          # root of the project
    | .hg
    | .mypy_cache
    | .tox
    | venv
    | _build
    | buck-out
    | build
    | dist
  )/
'''

# iSort
[tool.isort]
profile = "black"
line_length = 79
multi_line_output = 3
include_trailing_comma = true
